fix(select): fix for ligatures being cutoff (#190)
closes #187

--- a/packages/core/src/components/select/_select.scss
+++ b/packages/core/src/components/select/_select.scss
@@ -66,7 +66,6 @@
       appearance: none;
       font-family: inherit;
       border-radius: $ray-border-radius;
-      line-height: 1;
       width: 100%;
       height: 100%;
       font-size: $ray-field-label-size;
